--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -16,3 +16,18 @@
 
 /** Default Page Styling **/
 @import 'template-parts/pages/default-page-styling';
+
+/** Team Page Styling **/
+@import 'template-parts/pages/our-team';
+
+/** News & Events Page Styling **/
+@import 'template-parts/pages/news-events';
+
+/** Single Styling **/
+@import 'template-parts/pages/single';
+
+/** Insights Page Styling **/
+@import 'template-parts/pages/insights';
+
+/** Blog Landing Page Styling **/
+@import 'template-parts/pages/blog-landing';
