--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -31,3 +31,6 @@
 
 /** Blog Landing Page Styling **/
 @import 'template-parts/pages/blog-landing';
+
+/** Careers Page Styling **/
+@import 'template-parts/pages/careers';
