--- a/sass/theme/template-parts/home/from-our-blog.scss
+++ b/sass/theme/template-parts/home/from-our-blog.scss
@@ -86,6 +86,10 @@ section#from-our-blog {
         h2 {
             font-family: $font-family-primary;
             font-weight: 400;
+            padding-top:30px;
+        }
+        a.btn {
+            margin-top:30px;
         }
         div:nth-of-type(3) {
             position: absolute;
